<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <ImageView
            android:id="@+id/eNaslovna"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/egLay"
            android:layout_alignTop="@id/egLay"
            android:layout_marginStart="10dp"
            android:layout_marginTop="18dp"
            app:srcCompat="@drawable/grof_monte_cristo" />
    <LinearLayout
        android:id="@+id/egLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/eNaslovna"
        android:layout_marginStart="10dp"

        android:layout_alignParentTop="true"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/eNaziv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/dNazivKnjigeT"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/eAutor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/dImeiPrezimeT" />

        <TextView
            android:id="@+id/eDatumObjavljivanja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dDatumObjavljivanjaT" />

        <TextView
            android:id="@+id/eOpis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/dOpisT" />

        <TextView
            android:id="@+id/eBrojStranica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dBrojStranicaT" />

        <Button
            android:id="@+id/eButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.9"
            android:layout_gravity="center"
            android:text="@string/dPreporuciT"
            android:focusable="false"


            />

    </LinearLayout>



    </RelativeLayout>
